# tinytorrent

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
files/: .funtext
include/: ThreadPool.h  itemreader.hpp  tcpclient.hpp  tcpconnection.hpp  tcpserver.hpp
src/: ThreadPool.cpp  tcpclient.cpp  tcpconnection.cpp  tcpserver.cpp
